0.05
 - Add At-rule to example.
 - Add another module to SEE ALSO section in doc.
 - Fix comment in code.
 - Improve At-rule variables.
 - Sort SEE ALSO section in doc.

0.04 2021-01-28T11:40:01+01:00
 - Add DESCRIPTION to CSS::Struct.
 - Add EXAMPLE to CSS::Struct.
 - Add EXAMPLE to CSS::Struct::Output::Raw doc.
 - Fix bugtracker.
 - Rewrite CSS::Struct::Output to use =head2 in doc.
 - Rewrite CSS::Struct::Output::Raw to use =head2 in doc.
 - Update copyright years.

0.03 2020-08-11T15:50:26+02:00
 - Fix test dependencies.

0.02 2020-08-09T14:57:52+02:00
 - Improve SEE ALSO section in doc.
 - Improve SYNOPSIS section in doc.
 - Remove obsolete module from SEE ALSO section in doc.

0.01 2020-08-09T12:06:25+02:00
 - First version.