@@ -31,6 +31,7 @@ requires:
   Error::Pure: 0.11
   List::MoreUtils: 0
   Readonly: 0
+  Scalar::Util: 0
 resources:
   bugtracker: https://github.com/michal-josef-spacek/CSS-Struct/issues
   homepage: https://github.com/michal-josef-spacek/CSS-Struct
