@@ -20,6 +20,7 @@ recursive_author_tests('xt');
 requires 'Class::Utils' => 0.03;
 requires 'Error::Pure' => 0.11;
 requires 'List::MoreUtils' => 0;
+requires 'Scalar::Util' => 0;
 requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/CSS-Struct/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/CSS-Struct';
